# schwarz-gmres-dashboard

./: .gitignore  CMakeLists.txt  README.md  STATUS.md  app.py  demo_committee.sh  demo_comparison.sh  demo_gpu_vs_cpu.sh  requirements.txt  spack.yaml
.streamlit/: config.toml
bench/: CMakeLists.txt  gpu_scaling.cpp  petsc_baseline.cpp  strong_scaling.cpp  trilinos_baseline.cpp  weak_scaling.cpp
cmake/: CUDAConfig.cmake  FindPETSc.cmake  FindTrilinos.cmake
scripts/: compare.py  dashboard.py  download_matrices.sh  param_sweep.sh  plot_param_sweep.py  plot_scaling.py  roofline.py  run_scaling.sh
src/: CMakeLists.txt  main.cpp
src/analysis/: condition_estimator.h  convergence_analysis.h  spectral_analysis.h
src/comm/: cuda_aware_mpi.h  halo_exchange.h
src/core/: bicgstab.h  distributed_gmres.h  distributed_matrix.h  fgmres.cpp  fgmres.h  gmres.cpp  gmres.h  sparse_matrix.h  vector.h
src/decomp/: domain_decomp.h  overlap.h
src/gpu/: asm_gpu.h  cuda_blas.h  cuda_common.h  cuda_sparse.h  gmres_gpu.cu  gmres_gpu.h  local_solve_kernel.cu
src/io/: matrix_market.h  metrics_logger.h
src/mesh/: poisson.h
src/precond/: asm.h  coarse_solve.h  coarse_space.h  distributed_schwarz.h  distributed_two_level_schwarz.h  ilu0.h  ilut.h  jacobi.h  preconditioner.h  ras.h  two_level_schwarz.h
tests/: CMakeLists.txt  test_gmres.cpp  test_gpu_kernels.cu  test_schwarz.cpp  test_two_level.cpp
